dfir_rs/tests/compile-fail-stable/surface_port_join_forwardref.stderr
error: `join` received unexpected input port: <elided>. Expected one of: `0`, `1`
 --> tests/compile-fail-stable/surface_port_join_forwardref.rs:5:42
  |
5 |         source_iter([(1, 1), (2, 2)]) -> j;
  |                                          ^

error: `join` received unexpected input port: <elided>. Expected one of: `0`, `1`
 --> tests/compile-fail-stable/surface_port_join_forwardref.rs:6:42
  |
6 |         source_iter([(3, 3), (4, 4)]) -> j;
  |                                          ^

error: `join` missing expected input port(s): `0`, `1`.
 --> tests/compile-fail-stable/surface_port_join_forwardref.rs:7:13
  |
7 |         j = join() -> for_each(std::mem::drop);
  |             ^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
 --> tests/compile-fail-stable/surface_port_join_forwardref.rs:9:8
  |
9 |     df.run_available_sync();
  |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
